--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 
 html,
 body {
     height: 100%;
     width: 100%;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Raleway', sans-serif;
     color: #333;
 }
 
@@ -20,6 +20,41 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.hero-copy {
+    text-transform: uppercase;
+    top: 28%;
+    left: 19%;
+    text-align: left;
+}
+
+.first-line {
+    font-size: 1.625rem;
+}
+
+.second-line {
+    font-size: 4.125rem;
+}
+
+.brown-color {
+    color: #7b6c63;
+}
+
+.download-btn {
+    display: flex;
+    width: 262px;
+    height: 60px;
+    background: rgba(232, 181, 181, 0.2);
+    color: white;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.5;
+    text-decoration: none !important;
+}
+
+.download-btn:hover {
+    color: #7b6c63 !important;
 }
 
 
