--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,136 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Oleo+Script&display=swap");
 
 html,
 body {
-    height: 100%;
-    width: 100%;
-    font-family: 'Raleway', sans-serif;
-    color: #333;
+  height: 100%;
+  width: 100%;
+  font-family: "Raleway", sans-serif;
+  color: #333;
 }
 
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.form-control {
+  background-color: rgba(51, 51, 51, 0);
+  font-size: 18px;
+  border: none;
+  border-bottom: 3px solid #000000;
+  border-radius: 0px;
+}
+
+.form-control:focus {
+  color: #495057;
+  background-color: rgba(255, 255, 255, 0);
+  border-color: #80bdff00;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0);
+  border-bottom: 3px solid #000000;
+}
+
+.logo {
+  font-family: "Oleo Script", cursive;
+}
+
+
 .navbar {
-    padding: .8rem;
+  padding: 0.8rem;
+}
+
+.footerpad {
+  background-color: #222222;
+  padding: 0px 11%;
+}
+
+.footer-copyright {
+  background-color: #1c1c1c;
+}
+
+.footerpad .logo {
+  color: #7b6c63;
+}
+
+.footer-text-color {
+  color: #929292;
 }
 
 .m-nav-space {
-    margin: 0px 13%;
+  margin: 0px 13%;
 }
 
 .carousel-inner img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .hero-copy {
-    text-transform: uppercase;
-    top: 28%;
-    left: 19%;
-    text-align: left;
+  text-transform: uppercase;
+  top: 28%;
+  left: 19%;
+  text-align: left;
 }
 
 .first-line {
-    font-size: 1.625rem;
+  font-size: 1.625rem;
 }
 
 .second-line {
-    font-size: 4.125rem;
+  font-size: 4.125rem;
 }
 
 .brown-color {
-    color: #7b6c63;
+  color: #7b6c63;
 }
 
 .download-btn {
-    display: flex;
-    width: 262px;
-    height: 60px;
-    background: rgba(232, 181, 181, 0.2);
-    color: white;
-    align-items: center;
-    justify-content: center;
-    opacity: 0.5;
-    text-decoration: none !important;
+  display: flex;
+  width: 170px;
+  height: 43px;
+  width: 262px;
+  height: 60px;
+  background-color: rgba(232, 181, 181, 0.2);
+  color: white;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none !important;
 }
+
+.submit-btn {
+  margin: auto;
+  width: 170px;
+  height: 43px;
+  background-color: #f5f5f5;
+  color: black;
+  align-items: center;
+  text-decoration: none !important;
+  border: 2px solid black;
+}
+
 
 .download-btn:hover {
-    color: #7b6c63 !important;
+  color: #7b6c63 !important;
 }
 
+.sm-input {
+  width: 361px;
+}
 
+.big-input {
+  width: 722px;
+}
 
+.contact {
+  background-color: #f5f5f5;
+  height: 606px;
+}
 
-
-
-
+.contact-padding {
+  padding: 7% 30%;
+}
 
 
 
@@ -73,56 +141,51 @@ body {
 
 @media (max-width: 576px) {}
 
-
 /*---Firefox Bug Fix --*/
 .carousel-item {
-    transition: -webkit-transform 0.5s ease;
-    transition: transform 0.5s ease;
-    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-    -webkit-backface-visibility: visible;
-    backface-visibility: visible;
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
 }
 
 /*--- Fixed Background Image --*/
 figure {
-    position: relative;
-    width: 100%;
-    height: 60%;
-    margin: 0 !important;
+  position: relative;
+  width: 100%;
+  height: 60%;
+  margin: 0 !important;
 }
 
 .fixed-wrap {
-    clip: rect(0, auto, auto, 0);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 #fixed {
-    background-image: url('img/mac.png');
-    position: fixed;
-    display: block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center center;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    will-change: transform;
+  background-image: url("img/mac.png");
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  will-change: transform;
 }
 
 /*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
-    padding: 1rem;
+  padding: 1rem;
 }
-
-
-
-
 
 /*
 Extra small (xs) devices (portrait phones, less than 576px)
