--- a/css/style.css
+++ b/css/style.css
@@ -14,22 +14,22 @@ ul {
   list-style-type: none;
 }
 
-.form-control {
-  background-color: rgba(51, 51, 51, 0);
-  font-size: 18px;
-  border: none;
-  border-bottom: 3px solid #000000;
-  border-radius: 0px;
+.padding-bottom {
+  padding-bottom: 90px;
 }
 
-.form-control:focus {
-  color: #495057;
-  background-color: rgba(255, 255, 255, 0);
-  border-color: #80bdff00;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0);
-  border-bottom: 3px solid #000000;
+.bg-dark {
+  background-color: #303030;
 }
+
+
+
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: rgba(255, 255, 255, .75);
+  border-bottom: 4px #7b6c63 solid;
+}
+
 
 .logo {
   font-family: "Oleo Script", cursive;
@@ -38,23 +38,6 @@ ul {
 
 .navbar {
   padding: 0.8rem;
-}
-
-.footerpad {
-  background-color: #222222;
-  padding: 0px 11%;
-}
-
-.footer-copyright {
-  background-color: #1c1c1c;
-}
-
-.footerpad .logo {
-  color: #7b6c63;
-}
-
-.footer-text-color {
-  color: #929292;
 }
 
 .m-nav-space {
@@ -115,12 +98,34 @@ ul {
   color: #7b6c63 !important;
 }
 
+
+.icons-font {
+  font-size: 29px;
+}
+
 .sm-input {
   width: 361px;
 }
 
 .big-input {
   width: 722px;
+}
+
+.form-control {
+  background-color: rgba(51, 51, 51, 0);
+  font-size: 18px;
+  border: none;
+  border-bottom: 3px solid #000000;
+  border-radius: 0px;
+}
+
+.form-control:focus {
+  color: #495057;
+  background-color: rgba(255, 255, 255, 0);
+  border-color: #80bdff00;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0);
+  border-bottom: 3px solid #000000;
 }
 
 .contact {
@@ -132,11 +137,30 @@ ul {
   padding: 7% 30%;
 }
 
+.footerpad {
+  background-color: #222222;
+  padding: 0px 11%;
+}
+
+.footer-copyright {
+  background-color: #1c1c1c;
+}
+
+.footerpad .logo {
+  color: #7b6c63;
+}
+
+.footer-text-color {
+  color: #929292;
+}
+
+
 .date-footer {
   color: #5f5f5f;
   font-size: 9.99px;
   margin: 0px;
 }
+
 
 .postfooter {
   border-bottom: 1px white solid;
@@ -152,57 +176,78 @@ ul {
 /*---Media Queries --*/
 @media (max-width: 992px) {}
 
-@media (max-width: 768px) {}
+@media (max-width: 767px) {
+  .offset-3 {
+    margin-left: 0%;
+  }
 
-@media (max-width: 576px) {}
-
-/*---Firefox Bug Fix --*/
-.carousel-item {
-  transition: -webkit-transform 0.5s ease;
-  transition: transform 0.5s ease;
-  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
+  /* .d-flex {
+    display: block !important;
+  }
 }
 
-/*--- Fixed Background Image --*/
-figure {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  margin: 0 !important;
-}
+.text-right {
+  text-align: center !important;
+} */
 
-.fixed-wrap {
-  clip: rect(0, auto, auto, 0);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+  @media (max-width: 576px) {}
 
-#fixed {
-  background-image: url("img/mac.png");
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center center;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  will-change: transform;
-}
 
-/*--- Bootstrap Padding Fix --*/
-[class*="col-"] {
-  padding: 1rem;
-}
 
-/*
+
+
+
+
+
+
+
+  /*---Firefox Bug Fix --*/
+  .carousel-item {
+    transition: -webkit-transform 0.5s ease;
+    transition: transform 0.5s ease;
+    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+    -webkit-backface-visibility: visible;
+    backface-visibility: visible;
+  }
+
+  /*--- Fixed Background Image --*/
+  figure {
+    position: relative;
+    width: 100%;
+    height: 60%;
+    margin: 0 !important;
+  }
+
+  .fixed-wrap {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  #fixed {
+    background-image: url("img/mac.png");
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    will-change: transform;
+  }
+
+  /*--- Bootstrap Padding Fix --*/
+  [class*="col-"] {
+    padding: 1rem;
+  }
+
+  /*
 Extra small (xs) devices (portrait phones, less than 576px)
 No media query since this is the default in Bootstrap
 
